Quorum3/Library/Tests/Templating/Fail/DiamondProblemWithTwoTypes_9.quorum
class main
    action main
        D d
    end
end